feat: properties create/read routes
